--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME="Collect Ideas System"
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:CcXZCcul/ERAC7D81gGoNdylFVVuGpoWSmFyAMPABPs=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -10,11 +10,11 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=collectIdeads
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=123456789
 
-BROADCAST_DRIVER=log
+BROADCAST_DRIVER=pusher
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
@@ -42,10 +42,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_APP_ID=1362777
+PUSHER_APP_KEY=50ef73b1d72e2466e314
+PUSHER_APP_SECRET=56345b16169a1bf55972
+PUSHER_APP_CLUSTER=ap1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
@@ -54,3 +54,4 @@ MIX_BASE_API=/api
 MIX_TIME_OUT=100000
 MIX_LARAVEL_LANG=en
 MIX_APP_TITLE="Collect Ideas System"
+L5_SWAGGER_GENERATE_ALWAYS=true
