--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"bootstrap-vue": "^2.21.2",
 		"core-js": "^3.20.0",
 		"js-cookie": "^3.0.1",
+		"laravel-echo": "^1.11.4",
 		"pusher-js": "^7.0.6",
 		"vue-i18n": "^8.26.7",
 		"vue-router": "^3.5.3",
