--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 	},
 	"dependencies": {
 		"bootstrap-vue": "^2.21.2",
+		"chart.js": "2.9.4",
 		"core-js": "^3.20.0",
 		"js-cookie": "^3.0.1",
 		"laravel-echo": "^1.11.4",
