--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"core-js": "^3.20.0",
 		"js-cookie": "^3.0.1",
 		"laravel-echo": "^1.11.4",
+		"moment": "^2.29.1",
 		"pusher-js": "^7.0.6",
 		"vue-i18n": "^8.26.7",
 		"vue-router": "^3.5.3",
