--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"prod": "npm run production",
 		"production": "mix --production",
 		"postinstall": "npm run prod",
-		"prepare": "husky install"
+		"prepare": "husky install",
+		"test": "jest --runInBand --detectOpenHandles"
 	},
 	"lint-staged": {
 		"**/*": "prettier --write --ignore-unknown"
@@ -36,14 +37,22 @@
 		"webpack-chunk-rename-plugin": "^1.0.3"
 	},
 	"dependencies": {
+		"@babel/core": "^7.17.8",
+		"@vue/test-utils": "^2.0.0-rc.19",
+		"babel-core": "^6.26.3",
+		"babel-jest": "^27.5.1",
 		"bootstrap-vue": "^2.21.2",
 		"chart.js": "2.9.4",
 		"core-js": "^3.20.0",
+		"jest": "^27.5.1",
+		"jest-serializer-vue": "^2.0.2",
+		"jest-transform-stub": "^2.0.0",
 		"js-cookie": "^3.0.1",
 		"laravel-echo": "^1.11.4",
 		"moment": "^2.29.1",
 		"pusher-js": "^7.0.6",
 		"vue-i18n": "^8.26.7",
+		"vue-jest": "^3.0.7",
 		"vue-router": "^3.5.3",
 		"vuex": "^3.6.2"
 	}
