--- a/package.json
+++ b/package.json
@@ -37,10 +37,11 @@
 		"webpack-chunk-rename-plugin": "^1.0.3"
 	},
 	"dependencies": {
-		"@babel/core": "^7.17.8",
-		"@vue/test-utils": "^2.0.0-rc.19",
-		"babel-core": "^6.26.3",
-		"babel-jest": "^27.5.1",
+		"@babel/core": "^7.14.3",
+		"@babel/preset-env": "^7.14.4",
+		"@vue/test-utils": "^1.2.0",
+		"babel-core": "^7.0.0-bridge.0",
+		"babel-jest": "^27.0.2",
 		"bootstrap-vue": "^2.21.2",
 		"chart.js": "2.9.4",
 		"core-js": "^3.20.0",
