--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.4",
+        "maatwebsite/excel": "^3.1",
         "pda/pheanstalk": "^4.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^7.0",
