--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
 APP_NAME="Collect Ideas System"
 APP_ENV=local
-APP_KEY=base64:CcXZCcul/ERAC7D81gGoNdylFVVuGpoWSmFyAMPABPs=
+APP_KEY=base64:Fm62rd1kwmRMWgBRQotPb5Z140Sxx8P6QjNYUYevAZw=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://group1.cat-dev.tech/
+SERVER_PORT=80
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
@@ -10,14 +11,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=collectIdeads
+DB_DATABASE=collectIdead
 DB_USERNAME=root
-DB_PASSWORD=123456789
+DB_PASSWORD=Cat@Dev2022
 
 BROADCAST_DRIVER=pusher
-CACHE_DRIVER=file
+CACHE_DRIVER=redis
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=redis
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -26,14 +27,16 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_QUEUE=emails
+REDIS_CLIENT=predis
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
+MAIL_DRIVER=smtp
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=587
+MAIL_USERNAME=namnt2705@gmail.com
+MAIL_PASSWORD=tvlclwrulozdosyr
+MAIL_ENCRYPTION=tls
+MAIL_FROM_ADDRESS=namnt2705@gmail.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
@@ -42,10 +45,10 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-PUSHER_APP_ID=1362777
-PUSHER_APP_KEY=50ef73b1d72e2466e314
-PUSHER_APP_SECRET=56345b16169a1bf55972
-PUSHER_APP_CLUSTER=ap1
+PUSHER_APP_ID=mypusherid
+PUSHER_APP_KEY=mypusherappkey
+PUSHER_APP_SECRET=mypushersecret
+PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
@@ -54,4 +57,4 @@ MIX_BASE_API=/api
 MIX_TIME_OUT=100000
 MIX_LARAVEL_LANG=en
 MIX_APP_TITLE="Collect Ideas System"
-L5_SWAGGER_GENERATE_ALWAYS=true
+SANCTUM_STATEFUL_DOMAINS=localhost:8000,127.0.0.1:8000,group1.cat-dev.tech
