--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,13 @@ SERVER_PORT=80
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
+DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=collectIdead
+DB_DATABASE=:memory:
 DB_USERNAME=root
-DB_PASSWORD=Cat@Dev2022
+DB_PASSWORD=
+
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
